# django-chunked-upload

./: .flake8  .gitignore  Dockerfile  Makefile  README.rst  pyproject.toml  setup.py
.github/workflows/: python-ci.yml
chunked_upload/: apps.py  models.py  settings.py  views.py
chunked_upload/management/commands/: delete_expired_uploads.py
chunked_upload/migrations/: 0001_initial.py  0002_alter_chunkedupload_id.py
tests/: conftest.py  test.py
